Erweiterung des ManagedPlugin Interfaces